// Hình 2.14. Sơ đồ quan hệ thực thể (ERD) — dán toàn bộ tệp này vào https://dbdiagram.io
// Đối chiếu apps/backend/app/models/*.py và alembic/versions/*.py — 8 bảng, PostgreSQL (Neon).
// "user" và "order" là từ khoá của PostgreSQL nên luôn đặt trong ngoặc kép.

Project cskh_multi_agent {
  database_type: 'PostgreSQL'
  Note: 'Hệ thống chăm sóc khách hàng tự trị sử dụng Multi-Agent AI'
}

// ── Nhóm hội thoại ───────────────────────────────────────────────────────────
Table "user" {
  id uuid [pk, note: 'UUIDMixin, sinh phía ứng dụng (uuid4)']
  email varchar(255) [not null, note: 'Định danh đăng nhập, chuẩn hoá chữ thường']
  password_hash varchar(255) [not null, note: 'Băm bcrypt']
  role varchar(16) [not null, note: 'admin | customer']
  display_name varchar(255)
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    email [unique, name: 'ix_user_email']
  }
}

Table conversation {
  id uuid [pk]
  customer_id uuid [note: 'Khách sở hữu; NULL với khách vãng lai']
  customer_identifier varchar(255) [note: 'Nhãn nhận dạng khách vãng lai']
  status varchar(32) [not null, default: 'NEW', note: 'Trạng thái canonical (PRD §15)']
  current_intent varchar(64)
  entities jsonb [not null, default: '{}']
  confidence float
  uncertainty_flags jsonb [not null, default: '[]']
  escalation_reason text
  priority varchar(16)
  severity varchar(16)
  escalation_card jsonb [note: 'Thẻ ngữ cảnh chuyển tiếp']
  assigned_admin_id uuid [note: 'Quản trị viên đang xử lý; tham chiếu mềm, không có khoá ngoại']
  last_message_at timestamptz
  auto_resolve_reminded_at timestamptz [note: 'Mốc đã gửi tin nhắc']
  created_at timestamptz [not null, default: `now()`]
  updated_at timestamptz [not null, default: `now()`, note: 'onupdate now()']

  Indexes {
    status [name: 'ix_conversation_status']
    customer_id [name: 'ix_conversation_customer_id']
  }
}

Table message {
  id uuid [pk]
  conversation_id uuid [not null]
  sender varchar(16) [not null, note: 'customer | ai | admin']
  content text [not null]
  intent varchar(64)
  confidence float
  client_msg_id varchar(64) [note: 'Do client sinh, chống trùng khi gửi lại']
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    conversation_id [name: 'ix_message_conversation_id']
    (conversation_id, client_msg_id) [unique, name: 'uq_message_conversation_client_msg_id', note: 'Chỉ mục từng phần: WHERE client_msg_id IS NOT NULL']
  }
}

Table "order" {
  id uuid [pk]
  order_code varchar(32) [not null, note: 'Mã đơn, chỉ gồm chữ số']
  customer_id uuid [not null, note: 'Chủ đơn, khoá phạm vi tra cứu']
  status varchar(16) [not null]
  items_summary varchar(255) [not null]
  region varchar(64) [not null]
  ordered_at timestamptz [not null]
  shipped_at timestamptz
  delivered_at timestamptz
  cancelled_at timestamptz
  estimated_delivery timestamptz
  tracking_code varchar(64)
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    order_code [unique, name: 'ix_order_order_code']
    customer_id [name: 'ix_order_customer_id']
  }
}

// ── Nhóm cấu hình ────────────────────────────────────────────────────────────
Table gate_config {
  id integer [pk, note: 'Luôn bằng 1 (bảng chỉ có một dòng)']
  auto_reply_enabled boolean [not null, default: true]
  auto_resolve_enabled boolean [not null, default: true]
  auto_resolve_minutes integer [not null, default: 30, note: 'Ngưỡng im lặng T1 (phút): gửi tin nhắc']
  auto_resolve_grace_minutes integer [not null, default: 15, note: 'Ngưỡng T2 kể từ lúc nhắc (phút): đóng ca']
}

Table gate_intent_rule {
  intent varchar(64) [pk, note: 'Tên ý định']
  label varchar(64) [not null, note: 'Nhãn hiển thị']
  sensitive boolean [not null, default: false, note: 'Chỉ dùng để hiển thị nhãn']
  send_directly boolean [not null, default: true, note: 'true: gửi thẳng; false: giữ nháp chờ duyệt']
}

// ── Nhóm hỗ trợ ──────────────────────────────────────────────────────────────
Table audit_log {
  id uuid [pk]
  conversation_id uuid [note: 'Tham chiếu mềm, không có khoá ngoại: nhật ký bền cả khi hội thoại bị xoá']
  message_id uuid [note: 'Tham chiếu mềm, không có khoá ngoại']
  turn_id uuid [note: 'Khoá gom các dòng của một lượt']
  duration_ms integer
  node varchar(32) [note: 'customer | intent | knowledge | decision | response | delivery | admin']
  action varchar(64)
  confidence float
  uncertainty_flags jsonb [not null, default: '[]']
  escalation_reason text
  detail jsonb [not null, default: '{}']
  created_at timestamptz [not null, default: `now()`]

  Indexes {
    conversation_id [name: 'ix_audit_log_conversation_id']
    turn_id [name: 'ix_audit_log_turn_id']
    created_at [name: 'ix_audit_log_created_at']
  }
}

Table knowledge_document {
  id uuid [pk]
  title varchar(255) [not null]
  source_type varchar(16) [note: 'pdf | docx | txt | md']
  file_ref varchar(512) [unique, note: 'Khoá ổn định, trùng payload.source trên Qdrant']
  doc_type varchar(16) [note: 'Thư mục kho tri thức hoặc upload']
  intent varchar(64)
  chunks integer [not null, default: 0, note: 'Số điểm vector đã ghi']
  metadata jsonb [not null, default: '{}']
  status varchar(16) [not null, default: 'pending', note: 'indexed | pending']
  embedding_ref varchar(255)
  created_at timestamptz [not null, default: `now()`]
  indexed_at timestamptz

  Note: 'Sổ hiển thị cho màn hình Quản lý tri thức; nguồn chính thức là thư mục knowledge/ và Qdrant'
}

// ── Khoá ngoại thật ──────────────────────────────────────────────────────────
Ref: conversation.customer_id > "user".id [delete: set null]
Ref: "order".customer_id > "user".id [delete: cascade]
Ref: message.conversation_id > conversation.id [delete: cascade]

// ── Tham chiếu mềm của nhật ký: vẽ nét xám, KHÔNG có khoá ngoại trong CSDL ────
// DBML không có kiểu liên kết "không ràng buộc", nên bản xuất SQL của dbdiagram sẽ sinh
// thêm hai khoá ngoại này — chỉ dùng tệp để vẽ hình, không dùng bản xuất SQL làm schema.
Ref: audit_log.conversation_id > conversation.id [color: #9E9E9E]
Ref: audit_log.message_id > message.id [color: #9E9E9E]
// Cùng loại tham chiếu mềm (hình PlantUML cũ cũng không vẽ); bỏ // nếu muốn vẽ thêm:
// Ref: conversation.assigned_admin_id > "user".id [color: #9E9E9E]

TableGroup nhom_hoi_thoai {
  "user"
  conversation
  message
  "order"
}

TableGroup nhom_cau_hinh {
  gate_config
  gate_intent_rule
}

TableGroup nhom_ho_tro {
  audit_log
  knowledge_document
}
